// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Mapping serializeWixBlocksToWordPressBlocks handles "unstyled" blocks as paragraphs 1`] = `
"<!-- wp:paragraph -->
<p class=\\"\\"><div>This is a paragraph</div></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p class=\\"\\"><div>This is another paragraph</div></p>
<!-- /wp:paragraph -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks handles code blocks 1`] = `
"<!-- wp:code -->
<pre><code><div>This is some code
It's possibly the best code I've ever written
maybe.</div></code></pre>
<!-- /wp:code -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks handles embedded videos 1`] = `
"<!-- wp:embed {\\"url\\":\\"https://www.youtube.com/watch?v=RWf83UX4vKs\\"} -->
<figure class=\\"wp-block-embed\\"><div class=\\"wp-block-embed__wrapper\\">
https://www.youtube.com/watch?v=RWf83UX4vKs
</div></figure>
<!-- /wp:embed -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks handles formatting in text 1`] = `
"<!-- wp:paragraph -->
<p class=\\"\\"><div>This is <core/bold>bold</core/bold>, <core/italic>italic</core/italic>, <core/underline style=\\"text-decoration: underline;\\">underlined</core/underline>, <core/bold><core/underline style=\\"text-decoration: underline;\\">and</core/underline> <core/italic>a combination</core/italic></core/bold>.</div></p>
<!-- /wp:paragraph -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks handles full-width image galleries 1`] = `
"<!-- wp:gallery {\\"columns\\":2} -->
<figure class=\\"columns-2 is-cropped\\"><ul class=\\"blocks-gallery-grid\\"><li class=\\"blocks-gallery-item\\"><figure><img src=\\"https://static.wixstatic.com/media/image10.png\\"/></figure></li><li class=\\"blocks-gallery-item\\"><figure><img src=\\"https://static.wixstatic.com/media/image11.png\\"/></figure></li><li class=\\"blocks-gallery-item\\"><figure><img src=\\"https://static.wixstatic.com/media/image12.png\\"/></figure></li></ul></figure>
<!-- /wp:gallery -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks handles full-width images 1`] = `
"<!-- wp:image {\\"align\\":\\"full\\"} -->
<figure class=\\"alignfull\\"><img src=\\"https://static.wixstatic.com/media/image9.png\\" alt=\\"image9 alt text\\"/><figcaption><div>image9 caption</div></figcaption></figure>
<!-- /wp:image -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks handles heading blocks 1`] = `
"<!-- wp:heading -->
<h2 class=\\"\\"><div>This is a h2</div></h2>
<!-- /wp:heading -->

<!-- wp:heading {\\"level\\":3} -->
<h3 class=\\"\\"><div>This is a h3</div></h3>
<!-- /wp:heading -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks handles image galleries 1`] = `
"<!-- wp:gallery {\\"columns\\":4} -->
<figure class=\\"columns-4 is-cropped\\"><ul class=\\"blocks-gallery-grid\\"><li class=\\"blocks-gallery-item\\"><figure><img src=\\"https://static.wixstatic.com/media/image2.png\\"/></figure></li><li class=\\"blocks-gallery-item\\"><figure><img src=\\"https://static.wixstatic.com/media/image3.png\\"/></figure></li><li class=\\"blocks-gallery-item\\"><figure><img src=\\"https://static.wixstatic.com/media/image4.png\\"/></figure></li><li class=\\"blocks-gallery-item\\"><figure><img src=\\"https://static.wixstatic.com/media/image5.png\\"/></figure></li><li class=\\"blocks-gallery-item\\"><figure><img src=\\"https://static.wixstatic.com/media/image6.png\\"/></figure></li><li class=\\"blocks-gallery-item\\"><figure><img src=\\"https://static.wixstatic.com/media/image7.png\\"/></figure></li><li class=\\"blocks-gallery-item\\"><figure><img src=\\"https://static.wixstatic.com/media/image8.png\\"/></figure></li></ul></figure>
<!-- /wp:gallery -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks handles links in text 1`] = `
"<!-- wp:paragraph -->
<p class=\\"\\"><div>This is <core/link url=\\"https://wordpress.org/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">a link</core/link>.</div></p>
<!-- /wp:paragraph -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks handles list items 1`] = `
"<!-- wp:list {\\"ordered\\":true} -->
<ol><div><li>Number one</li><li>Number two</li><li>Number three</li></div></ol>
<!-- /wp:list -->

<!-- wp:list -->
<ul><div><li>First</li><li>Second</li></div></ul>
<!-- /wp:list -->

<!-- wp:list {\\"ordered\\":true} -->
<ol><div><li>Number one, second edition</li></div></ol>
<!-- /wp:list -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks handles quote blocks 1`] = `
"<!-- wp:quote -->
<blockquote class=\\"\\"><div><p>Use the source, Luke.</p></div></blockquote>
<!-- /wp:quote -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks handles single images 1`] = `
"<!-- wp:image {\\"align\\":\\"center\\"} -->
<div><figure class=\\"aligncenter\\"><a href=\\"https://wordpress.org/\\" target=\\"_blank\\" rel=\\"noopener\\"><img src=\\"https://static.wixstatic.com/media/image1.png\\" alt=\\"image1 alt text\\"/></a><figcaption><div>image1 caption</div></figcaption></figure></div>
<!-- /wp:image -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks handles uploaded videos 1`] = `
"<!-- wp:video -->
<figure><video controls poster=\\"https://static.wixstatic.com/media/video1_thumb.jpg\\" src=\\"https://video.wixstatic.com/video1.mp4\\"></video></figure>
<!-- /wp:video -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks ignores underline formatting that matches a link 1`] = `
"<!-- wp:paragraph -->
<p class=\\"\\"><div>This is <core/link url=\\"https://wordpress.org/\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">a link</core/link>.</div></p>
<!-- /wp:paragraph -->"
`;

exports[`Block Mapping serializeWixBlocksToWordPressBlocks returns an empty string when passed no blocks 1`] = `""`;
